--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Update to a scotch.io tutorial Easy Node Authentication:Google",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
