--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "mongoose": "^4.4.7",
     "passport": "^0.3.2",
     "passport-google": "^0.3.0",
     "passport-google-oauth": "^1.0.0",
-    "passport-google-oauth2": "^0.1.6"
+    "passport-google-oauth2": "^0.1.6",
+    "pg": "^6.2.4"
   }
 }
