--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular-animate": "^1.6.4",
     "angular-aria": "^1.6.4",
     "angular-material": "^1.1.4",
+    "angular-route": "^1.6.4",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.7",
     "express": "^4.13.4",
