--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth2": "^0.1.6",
     "pg": "^6.2.4",
-    "sweetalert": "^1.1.3"
+    "sweetalert": "^1.1.3",
+    "twilio": "^3.4.0"
   }
 }
