csvJson almost working...

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angular-route": "^1.6.4",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.7",
+    "csvtojson": "^1.1.7",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "json2csv": "^3.7.3",
     "passport": "^0.3.2",
     "passport-google": "^0.3.0",
     "passport-google-oauth": "^1.0.0",
