--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-route": "^1.6.4",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.6.0",
     "csvtojson": "^1.1.7",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
