--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "pg": "^6.2.4",
     "sweetalert": "^1.1.3",
     "twilio": "^3.4.0"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-uglify": "^3.0.1",
+    "grunt-contrib-watch": "^1.0.0"
   }
 }
