--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
     "csvtojson": "^1.1.7",
+    "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "json2csv": "^3.7.3",
