--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
+ACCOUNTSID = ACd751dd8870a891d1691af759af71e9a3
+AUTHTOKEN = f15fe40672439ed14942897e09da8a22
 
+PG_USER = jimvang
+DATABASE_SECRET = Jva7fxm2
+DATABASE_SERVER = localhost
+DATABASE_PORT = 5432
+DATABASE_NAME = stepUpCheckIn
+
+CLIENT_ID = 135959306026-jsfk0m6eqobogfgrckadrs8u1m0tk7ps.apps.googleusercontent.com
+CLIENT_SECRET = N2xVf9_O98DHsC9LHmaxgkG8
+CALLBACKURL = http://localhost:3000/auth/google/callback
